# cs4981-gpu-accelerated-render

./: CMakeLists.txt  README.md
samples/: dolphin-150.stl  dolphin-15k.stl  dolphin-1k.stl  dolphin-4k.stl  dolphin.stl  storm-trooper-19k.stl  suzanne-16k.stl  suzanne-1k.stl  suzanne-4k.stl
src/: cudaerr.cu  cudaerr.cuh  main.cpp  main.cu
src/graphics/: color.cpp  color.h  point2d.cu  point2d.h  point3d.cu  point3d.h  shapecontainer.cu  shapecontainer.h
src/graphics/context/: drawbase.h  drawcontext.cpp  drawcontext.cu  drawcontext.h  gcontext.cu  gcontext.h  viewcontext.cpp  viewcontext.cu  viewcontext.h  x11context.cpp  x11context.cu  x11context.h
src/graphics/shapes/: line.cu  line.h  shape.cpp  shape.h  triangle.cu  triangle.h
src/io/: stlreader.cpp  stlreader.cu  stlreader.h
src/matrix/: matrix.cpp  matrix.h  vector2.cpp  vector2.h  vector3.cu  vector3.h  vector4.cpp  vector4.h
